--- a/index.html
+++ b/index.html
@@ -17,38 +17,44 @@
 
 </head>
 
-<body class="container text-center">
-    <div class="col-12">
-        <div class="row">
-        </div>
-        <h1 class="pb-3">Fractal simulation</h1>
+<body class="container">
+    <div class="row">   
+        <div class="col-12 text-center">
 
-        <div id="canvas-container">
-            <canvas id="myCanvas" class="text-center"></canvas> 
-        </div>
+            <h1 class="pb-3">Fractal simulation</h1>
 
-
-        <div id="footer-container">
-                <div class="form-group d-inline-block">
-                    <label for="numberOfContainerPoints">Number of container points</label>
-                    <input id="numberOfContainerPoints" type="number" min="3" max="10">               
+            <div id="canvas-container" class="d-inline-flex text-center">
+                <div id="side-bar">
+                    <button class="btn btn-sm btn-secondary text-center w-100 rounded-1 mb-2">+</button>
+                    <br>
+                    <button class="btn btn-sm btn-secondary text-center w-100 rounded-1">-</button>
                 </div>
-                <div id="form-divider"></div>
-                <div class="form-group d-inline-block">
-                    <label for="nextPointFraction">Next point fraction</label>
-                    <input id="nextPointFraction" type="number" min="2" max="5">               
-                </div>
-                <div id="form-divider"></div>
-                <button id="randomize" class="btn btn-sm btn-secondary ml-5">Randomize</button>
-                <hr>
-                <p><small>
-                    Change the <b>number of container points</b> (3-10) and observe changes in the fractal.<br>
-                    <b>Next Point Fraction</b> (2-5): The fraction of the connecting line between the current point and the <br> selected container point, by which the current point will move (e.g. 2=midpoint, 3=1/3 of the line etc.)<br>
-                    Click <b>Randomize</b> to view other variances of the simulation under the same parameters.
-                </small></p>
-        </div>
+                <canvas id="myCanvas"></canvas>
+            </div>
 
-        </div>   
+            <div id="footer-container">
+                    <div class="form-group d-inline-block">
+                        <label for="numberOfContainerPoints">Number of container points</label>
+                        <input id="numberOfContainerPoints" type="number" min="3" max="10">               
+                    </div>
+                    <div id="form-divider"></div>
+                    <div class="form-group d-inline-block">
+                        <label for="nextPointFraction">Next point fraction</label>
+                        <input id="nextPointFraction" type="number" min="2" max="5">               
+                    </div>
+                    <div id="form-divider"></div>
+                    <button id="randomize" class="btn btn-sm btn-secondary ml-5">Randomize</button>
+                    <hr>
+                    <p><small>
+                        Change the <b>number of container points</b> (3-10) and observe changes in the fractal.<br>
+                        <b>Next Point Fraction</b> (2-5): The fraction of the connecting line between the current point and the <br> selected container point, by which the current point will move (e.g. 2=midpoint, 3=1/3 of the line etc.)<br>
+                        Click <b>Randomize</b> to view other variances of the simulation under the same parameters.
+                    </small></p>
+            </div> <!--footer-container-->
+
+        </div> <!--col -->
+  
+    </div> <!--row -->
 
 <!-- JAVASCRIPTS -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
