--- a/index.html
+++ b/index.html
@@ -24,14 +24,23 @@
             <h1 class="pb-3">Fractal simulation</h1>
 
             <div id="canvas-container" class="d-inline-flex text-center">
-                <div id="side-bar">
+                <div id="side-bar" class="text-center">
                     <h4>Zoom</h5>
                     <div id="zoom-level" class="mb-1"></div>
-                    <div class="btn-group-vertical">
-                        <button class="btn btn-sm btn-secondary rounded-1 mb-1 zoom-button zoom-in">+</button>
-                        <button class="btn btn-sm btn-secondary rounded-1 mb-1 zoom-button zoom-out">-</button>
-                        <button class="btn btn-sm btn-secondary rounded-1 zoom-button zoom-reset">X</button>
-                    </div>              
+                    <div class="btn-group-vertical text-center mb-3">
+                        <button class="btn d-block btn-sm btn-outline-secondary rounded-1 mb-1 zoom-button zoom-in">+</button>
+                        <button class="btn d-block btn-sm btn-outline-secondary rounded-1 mb-1 zoom-button zoom-out">-</button>
+                        <button class="btn d-block btn-sm btn-outline-secondary rounded-1 zoom-button zoom-reset">X</button>
+                    </div>
+                    <h4>Pan</h5>
+                    <div class="btn-group d-block text-center">
+                        <button class="btn btn-sm btn-outline-info rounded-1 text-center mb-1 pan-button pan-up">&uarr;</button>
+                        <br>
+                        <button class="btn btn-sm btn-outline-info rounded-1 pan-button pan-left">&larr;</button>
+                        <button class="btn btn-sm btn-outline-info rounded-1 pan-button pan-right">&rarr;</button>
+                        <br>
+                        <button class="btn btn-sm btn-outline-info rounded-1 text-center mt-1 pan-button pan-down">&darr;</button>
+                    </div>
                 </div>
                 <canvas id="myCanvas"></canvas>
             </div>
@@ -61,9 +70,7 @@
     </div> <!--row -->
 
 <!-- JAVASCRIPTS -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" 
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
-        crossorigin="anonymous"></script>
+<script src="./js/jquery-3.6.0.min.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" 
